<?xml version="1.0"?>
<package format="3">
  <name>minimal_nav_pkg</name>
  <version>0.0.1</version>
  <description>Minimal Nav2 starter package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

</package>
